--- a/plugin_style.css
+++ b/plugin_style.css
@@ -859,9 +859,15 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  height: 100dvh;
 }
 
-.drime-container #vdcontainer-drime #img-wrapper img, .drime-container #vdcontainter #img-wrapper img{ width: 100%; position: absolute; }
+.drime-container #vdcontainer-drime #img-wrapper img, .drime-container #vdcontainter #img-wrapper img{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+}
 
 .drime-container #vdcontainer-drime #sonorama-video, .drime-container #vdcontainter #sonorama-video{object-fit: cover; width: 100%; }
 
